fixed alignment of contact and about headers

--- a/css/about.css
+++ b/css/about.css
@@ -16,6 +16,7 @@ html, body {
 .landing-text h1 {
     padding: 0 0 0 20px ;
     border-left: 5px solid var(--primary);
+    width: 1100px;
 }
 
 #landing-page p {
